# ilsochrone

./: .env.example  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/app/: globals.css  home-inner.tsx  layout.tsx  page.tsx
apps/web/src/lib/: config.ts  geolocation.ts  navigation-links.test.ts  navigation-links.ts  polygon.ts  url-state.ts  utils.ts
docs/: DEVELOPING.md  FIRST-RUN.md  PRD.md  TASKS.md
docs/adr/: 0001-stack.md  0002-isochrone-engine.md  0003-poi-and-tile-providers.md  0004-deployment-and-ai-workflow.md  0005-navigation-handoff.md  0006-poi-provider-strategy.md  0007-self-maintained-isochrone-engine.md
docs/prompts/: initial-prompt.md
docs/reference/: graph-asset-format.md
docs/research/: 01-data-sources.md  02-local-vs-ors-iou.md
docs/superpowers/plans/: 2026-07-19-self-maintained-isochrone-engine.md  2026-07-19-ui-elevation.md
docs/superpowers/specs/: 2026-07-18-self-maintained-isochrone-engine-design.md  2026-07-19-ui-elevation-design.md
tools/graph-pipeline/: README.md  pyproject.toml
tools/graph-pipeline/src/graph_pipeline/: binfmt.py  build.py  cli.py  config.py  download.py  extract.py
tools/graph-pipeline/tests/: conftest.py  make_fixture.py  test_binfmt.py  test_build.py  test_extract.py
tools/graph-pipeline/tests/fixtures/: tiny.osm.pbf
(+24 files in other folders)
